# Generated by Django 5.2.13 on 2026-04-16 09:39

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ("patients", "0001_initial"),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="AgentLog",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "log_type",
                    models.CharField(
                        choices=[
                            ("voice_parse", "语音解析"),
                            ("health_feedback", "健康反馈"),
                            ("doctor_summary", "诊疗摘要"),
                            ("risk_eval", "风险评估"),
                            ("asr", "语音识别"),
                            ("tts", "语音合成"),
                            ("flow", "流程流转"),
                        ],
                        max_length=20,
                        verbose_name="日志类型",
                    ),
                ),
                (
                    "agent_name",
                    models.CharField(max_length=30, verbose_name="Agent名称"),
                ),
                (
                    "raw_input",
                    models.TextField(blank=True, default="", verbose_name="原始输入"),
                ),
                (
                    "raw_output",
                    models.TextField(blank=True, default="", verbose_name="原始输出"),
                ),
                (
                    "context_snapshot",
                    models.JSONField(blank=True, null=True, verbose_name="上下文快照"),
                ),
                (
                    "duration_ms",
                    models.IntegerField(blank=True, null=True, verbose_name="耗时(ms)"),
                ),
                (
                    "created_at",
                    models.DateTimeField(auto_now_add=True, verbose_name="创建时间"),
                ),
                (
                    "created_by",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        to=settings.AUTH_USER_MODEL,
                        verbose_name="操作用户",
                    ),
                ),
                (
                    "health_record",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="agent_logs",
                        to="patients.healthrecord",
                        verbose_name="关联健康记录",
                    ),
                ),
                (
                    "patient",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="agent_logs",
                        to="patients.patient",
                        verbose_name="所属患者",
                    ),
                ),
            ],
            options={
                "verbose_name": "Agent交互日志",
                "verbose_name_plural": "Agent交互日志",
                "ordering": ["-created_at"],
                "indexes": [
                    models.Index(
                        fields=["patient", "-created_at"],
                        name="agents_agen_patient_2db874_idx",
                    ),
                    models.Index(
                        fields=["log_type", "-created_at"],
                        name="agents_agen_log_typ_9af384_idx",
                    ),
                ],
            },
        ),
    ]
